@@ -303,7 +303,7 @@ $TUPA_CONF_VARS['REGEX'] = array(	// Some used regular expressions. DON'T CHANGE
 	//'textareaMultiDomains' =>'^([a-zA-Z0-9][a-zA-Z0-9\-\.]+\.('. $topLevelDomains .')(\n)?)*$',
 	'textareaMultiDomains' =>'^([a-zA-Z0-9][a-zA-Z0-9\-\.]+\.('. $topLevelDomains .')(\n|\r\n)?){1,%maxTmplDomains%}$',
 	'host' => '^[a-zA-Z0-9\*]([a-zA-Z0-9\-\.]*)$',
-	'IPv4' => '^(25[0-5]|2[0-4]|1\d\d|\d?\d)(\.(25[0-5]|2[0-4]|1\d\d|\d?\d)){3}$',
+	'IPv4' => '^(25[0-5]|2[0-4]\d|1\d\d|\d?\d)(\.(25[0-5]|2[0-4]\d|1\d\d|\d?\d)){3}$',
 	'IPv6' => '^((([0-9A-Fa-f]{1,4}:){7}[0-9A-Fa-f]{1,4})|(([0-9A-Fa-f]{1,4}:){6}:[0-9A-Fa-f]{1,4})|(([0-9A-Fa-f]{1,4}:){5}:([0-9A-Fa-f]{1,4}:)?[0-9A-Fa-f]{1,4})|(([0-9A-Fa-f]{1,4}:){4}:([0-9A-Fa-f]{1,4}:){0,2}[0-9A-Fa-f]{1,4})|(([0-9A-Fa-f]{1,4}:){3}:([0-9A-Fa-f]{1,4}:){0,3}[0-9A-Fa-f]{1,4})|(([0-9A-Fa-f]{1,4}:){2}:([0-9A-Fa-f]{1,4}:){0,4}[0-9A-Fa-f]{1,4})|(([0-9A-Fa-f]{1,4}:){6}((\b((25[0-5])|(1\d{2})|(2[0-4]\d)|(\d{1,2}))\b)\.){3}(\b((25[0-5])|(1\d{2})|(2[0-4]\d)|(\d{1,2}))\b))|(([0-9A-Fa-f]{1,4}:){0,5}:((\b((25[0-5])|(1\d{2})|(2[0-4]\d)|(\d{1,2}))\b)\.){3}(\b((25[0-5])|(1\d{2})|(2[0-4]\d)|(\d{1,2}))\b))|(::([0-9A-Fa-f]{1,4}:){0,5}((\b((25[0-5])|(1\d{2})|(2[0-4]\d)|(\d{1,2}))\b)\.){3}(\b((25[0-5])|(1\d{2})|(2[0-4]\d)|(\d{1,2}))\b))|([0-9A-Fa-f]{1,4}::([0-9A-Fa-f]{1,4}:){0,5}[0-9A-Fa-f]{1,4})|(::([0-9A-Fa-f]{1,4}:){0,6}[0-9A-Fa-f]{1,4})|(([0-9A-Fa-f]{1,4}:){1,7}:))$',
 	'PTR' => '^([0-9]{0,3}((\.)?([0-9]{1,3})){0,3})$|^((([0-9A-Fa-f]\.){31}|([0-9A-Fa-f]\.){27}|([0-9A-Fa-f]\.){23}|([0-9A-Fa-f]\.){19}|([0-9A-Fa-f]\.){15}|([0-9A-Fa-f]\.){11}|([0-9A-Fa-f]\.){7}|([0-9A-Fa-f]\.){3})[0-9A-Fa-f])$',
 	'HINFO' => '^([A-Za-z0-9\-\/])+ ([A-Za-z0-9\-\/])+$',
