@@ -79,7 +79,6 @@
 </table>
 ###NAVIGATION###
 <img src="images/clear.gif" width="1" height="20" />
-</table>
 <!-- ###LOGGING_SHOW### end -->
 
 
