@@ -25,7 +25,7 @@
 </div>
 <!-- ###CONTENT### end -->
 <!-- ###SINGLE### end -->
-<p>###SAVE_CONFIG### ###HIDDEN_FIELDS###</td>
+<p>###SAVE_CONFIG### ###HIDDEN_FIELDS###</p>
 <!-- ###TAB_systemConfig### end -->
 <!-- ###SYSTEM_CONFIG### end -->
 <!-- ###SYSTEM_LANG_MANAGER### begin -->
