@@ -122,6 +122,7 @@
 				</tr>
 			</table>
 		</td>
+	</tr>
 	<tr>
 		<td height="1" colspan="2"><img src="images/clear.gif" width="1" height="5" /></td>
 	</tr>
@@ -332,4 +333,4 @@
 
 
 </body>
-</head>
+</html>
